objects/Alert__c.object
<CustomObject>
    <fields>
        <fullName>Default_Page_Number__c</fullName>
        <label>Default Page Number</label>
        <picklist>
            <picklistValues>
                <fullName>10</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Migration_ID__c</fullName>
        <externalId>true</externalId>
        <label>Migration_ID-Delete After</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Unread_Alert__c</fullName>
        <label>Total Unread Alert</label>
        <summaryFilterItems>
            <field>Alert_Detail__c.Mark_As_Read__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Alert_Detail__c.Is_Deleted__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Alert_Detail__c.Alert__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Alerts</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Alert</label>
    <nameField>
        <displayFormat>A-{00000000}</displayFormat>
        <label>Alert Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Alerts</pluralLabel>
    <recordTypes>
        <fullName>Critical_Solution</fullName>
        <active>true</active>
        <label>Critical Solution</label>
    </recordTypes>
    <recordTypes>
        <fullName>HostID_Reference_Key</fullName>
        <active>true</active>
        <label>HostID/Reference Key</label>
    </recordTypes>
    <recordTypes>
        <fullName>Software_Update</fullName>
        <active>true</active>
        <label>Software Update</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>